# lacoquille

./: .gitignore  AGENTS.md  Dockerfile  README.md  astro.config.mjs  fly.toml  package-lock.json  package.json  plan.md  practice-snapshot.md  test-push.md
.github/workflows/: fly.yml
design/: README.md  SKILL.md  colors_and_type.css
design/preview/: brand-aspect-icons.html  brand-edge-vocab.html  brand-logo.html  colors-base.html  colors-edge.html  colors-gold.html  colors-mood.html  colors-text.html  components-badges.html  components-cards.html  components-controls.html  components-nav.html  components-panel.html  components-table.html  spacing-tokens.html  type-body.html  type-display.html  type-mono.html
design/ui_kits/website/: HomePage.jsx  Nav.jsx  README.md  TensePage.jsx  VerbsPage.jsx  index.html
docs/specs/: 2026-04-21-article-of-the-day-design.md
docs/superpowers/plans/: 2026-04-23-article-of-the-day-plan.md
lacq/: Cargo.toml  dist
lacq/src/: config.rs  gutenberg.rs  gutendex.rs  lib.rs  llm.rs  main.rs  translation.rs  vocab.rs
lacq/src/routes/: article.rs  mod.rs  stories.rs  tts.rs
lacq/tests/: article_pipeline.rs
scripts/: check-links.mjs
src/: content.config.ts
src/components/: AdverbDiagram.tsx  ArticleDiagram.tsx  ArticleOfTheDay.tsx  ConjugationTable.astro  GrammarDiagram.tsx  HomepageTabs.tsx  NegationDiagram.tsx  PolygonHero.tsx  PracticeHub.tsx  ShadowingPractice.tsx  Term.tsx  TypingRace.tsx  VerbDiagram.tsx  VocabMining.tsx
src/layouts/: Base.astro
src/pages/: index.astro
src/styles/: global.css
(+127 files in other folders)
