[package]
name = "lacq"
version = "0.1.0"
edition = "2021"

[lib]
name = "lacq"
path = "src/lib.rs"

[[bin]]
name = "lacq"
path = "src/main.rs"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

[dev-dependencies]
wiremock = "0.6"
